@@ -1,3 +1,9 @@
+2007-02-01  Johan Bilien  <johan.bilien@nokia.com>
+
+	* src/hildon-window.c:
+	Fixed the check for which property changed in _notify
+	Removed unused static function. Fixes: MB#962
+
 2007-02-01  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
 
 	* doc/gtk-doc.make:
